--- a/views/about.html
+++ b/views/about.html
@@ -1,1 +1,1 @@
-<div class="container"> <p>This is the about view.</p> </div>
+<navigation menu="about"></navigation> <div class="full-container"> <p>This is the about view.</p> </div>
